[package]
name = "my-seq-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { branch = "main", git = "https://github.com/MyJetTools/fl-url" }
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }

serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
hyper = { version = "0.14", features = ["full"] }
